GtkMenu: Add a destroy notify to gtk_menu_popup_for_device

This is necessary so language bindings can use gtk_menu_popup_for_device()
as a 'full' variant of gtk_menu_popup().

http://bugzilla.gnome.org/show_bug.cgi?id=623664